--- a/package.json
+++ b/package.json
@@ -1,27 +1,11 @@
 {
-  "name": "square-frontend-template",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "biome check",
-    "format": "biome format --write"
-  },
-  "dependencies": {
-    "@tanstack/react-query": "^5.90.6",
-    "axios": "^1.13.1",
-    "next": "16.1.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "zod": "^4.1.12"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.3.3",
-    "@types/node": "^24",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "typescript": "^5"
-  },
-  "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
+  "name": "create-square-app",
+  "version": "1.0.0",
+  "description": "Create a new Square frontend project",
+  "bin": "./bin/index.mjs",
+  "files": [
+    "bin",
+    "template"
+  ],
+  "type": "module"
 }
