--- a/template/package.json
+++ b/template/package.json
@@ -22,6 +22,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "shadcn": "^3.8.4",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
